--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "next": "10.0.7",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "typescript": "^4.2.2"
   }
 }
