--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "aws-sdk": "^2.859.0",
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "dotenv": "^8.2.0",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "next": "10.0.7",
     "pg": "^8.5.1",
     "react": "17.0.1",
