--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon src/server.ts",
     "build": "next build",
-    "start": "next start -p 80"
+    "start": "env NODE_ENV=production ts-node dist/src/server.js"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/multer": "^1.4.5",
     "aws-sdk": "^2.859.0",
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "formik": "^2.2.6",
     "lodash": "^4.17.21",
     "multer": "^1.4.2",
@@ -25,12 +28,15 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-redux": "^7.1.16",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
 }
