--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,5 +64,5 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/utils"]
 }
