--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "build": "next build",
-    "start": "env NODE_ENV=production ts-node src/server.ts"
+    "build": "next build && tsc",
+    "start": "cross-env NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
