--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "formik": "^2.2.6",
