--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.859.0",
     "axios": "^0.21.1",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
@@ -33,6 +34,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-redux": "^7.1.16",
