--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
