--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
+  },
+  "prettier": {
+    "useTabs": true
   }
 }
